--- a/webpack/index.html
+++ b/webpack/index.html
@@ -1,27 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modern Javascript</title>
-    <link rel="stylesheet" href="./src/css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./src/css/style.css" />
+  </head>
+  <body>
     <header>
-        <nav class="navMenu">
-            <a href="#">Home</a>
-            <a href="#">Fake</a>
-            <div class="dot"></div>
-        </nav>
-        <input type="text" name="searchBar" id="searchBar" placeholder="Find a city" autocomplete="off">
-        <div class="city-name"></div>
+      <nav class="navMenu">
+        <a href="#">Home</a>
+        <a href="#">Fake</a>
+        <div class="dot"></div>
+      </nav>
+      <input
+        type="text"
+        name="searchBar"
+        id="searchBar"
+        placeholder="Find a city"
+        autocomplete="off"
+      />
+      <div class="city-name"></div>
     </header>
 
-    <div class="container">
-    </div> 
-       <script  type="module" src="./src/js/script.js"></script>
-
-</body>
-
+    <div class="container"></div>
+    <script type="module" src="./src/js/script.js"></script>
+  </body>
 </html>
